--- a/style.css
+++ b/style.css
@@ -345,7 +345,26 @@ footer div:last-child p{
     }
 }
 
+/* slide nivio */
+.nivo-controlNav{
+    display: none;
+}
 
+.nivo-prevNav,
+.nivo-nextNav{
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 8px;
+}
+
+.nivo-prevNav{
+    border-radius: 0 16px 16px 0;
+}
+
+.nivo-nextNav{
+    border-radius: 16px 0 0 16px;
+
+}
 
 /* 
 inicio:
